# ai-limit-checker

./: .gitignore  AGENTS.md  LICENSE  MCP_REVIEW.md  README.md  RESEARCH_REPORT.md  REVIEW_PROMPT.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
src/ai_limit_checker/: __init__.py  antigravity.py  burn_rate.py  claude.py  cli.py  credentials.py  history.py  mcp_server.py  recommend.py  utils.py  watch.py
tests/: test_antigravity.py  test_burn_rate.py  test_claude.py  test_cli.py  test_credentials.py  test_history.py  test_mcp_server.py  test_recommend.py  test_utils.py  test_watch.py
